[project]
name = "klaviai"
version = "0.1.0"
description = ""
authors = [
    {name = "betowxyz",email = "robertom@marinheiro.com.br"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "requests (>=2.34.2,<3.0.0)"
]

[tool.poetry]
packages = [{include = "klaviai", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
